change in colore and made about section

--- a/Capstone-Project-Loan-Calculator-/src/App.css
+++ b/Capstone-Project-Loan-Calculator-/src/App.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   font-family: 'Syne', sans-serif;
-  background-color: #C3E1FF;
+  background-color: #f5f7fa;
   color: #333;
 }
 
